maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:24: error: '(' expected but identifier found.
      if !aMurNord(x,y+1){
         ^ShortestPathMaze:28: error: illegal start of simple expression
    }
    ^ShortestPathMaze:31: error: '(' expected but identifier found.
      if !aMurOuest(x+1,y){
         ^ShortestPathMaze:35: error: illegal start of simple expression
    }
    ^